# cloud-nine

./: .gitignore  README.md  pyproject.toml  requirements.txt
cloudnine/: cli.py  ui.py
cloudnine/database/: connection.py
cloudnine/devices/: base_provider.py  manager.py
cloudnine/devices/enums/: device_state.py  transport_type.py
cloudnine/devices/models/: device.py  device_passport.py  partition.py  storage_device.py
cloudnine/devices/providers/: linux.py  wsl.py
cloudnine/devices/providers/linux/: __init__.py  detector.py
cloudnine/devices/repositories/: passport_repository.py
data/: cloudnine.db
